texture paint bleed value doesn't work at seams where meshes overlap #40222

Closed
opened 2014-05-16 08:24:27 +02:00 by trupelo · 8 comments
trupelo commented 2014-05-16 08:24:27 +02:00 (Migrated from localhost:3001)

seam_(1).png

seam_(2).png

In this model, the right and left halves of the model share the same texture space.
When I assign a paint bleed value of 10 pixels and paint over the model, the bleed value is respected everywhere but the centre edge loop which leaves a visible seam and I have to manually paint this out of every paint layer.

Can this issue be fixed?
Thank you very much.

![seam_(1).png](https://archive.blender.org/developer/F89182/seam__1_.png) ![seam_(2).png](https://archive.blender.org/developer/F89183/seam__2_.png) In this model, the right and left halves of the model share the same texture space. When I assign a paint bleed value of 10 pixels and paint over the model, the bleed value is respected everywhere but the centre edge loop which leaves a visible seam and I have to manually paint this out of every paint layer. Can this issue be fixed? Thank you very much.
trupelo commented 2014-05-16 08:24:27 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
trupelo commented 2014-05-16 08:24:27 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @trupelo

Added subscriber: @trupelo
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-05-16 11:23:25 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Assigning to our paint guru! :)

Assigning to our paint guru! :)

It has been fixed already in the paint branch. I could port back the fix back on master

It has been fixed already in the paint branch. I could port back the fix back on master
Author

This issue was referenced by b963434f49

This issue was referenced by b963434f4965ca348c00b34e3aea5d7ab7374c71

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b963434f49.

Closed by commit b963434f49.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#40222
No description provided.